plugins {
    id 'java-library'
    id 'maven-publish'
    id 'io.freefair.lombok' version '8.0.1'
    id 'java'
    id 'war'
}

repositories {
    mavenLocal()
    mavenCentral()
}

ext {
    lombokVersion = '1.18.30'
    mapstructVersion = '1.5.5.Final'
    jacksonVersion = '2.16.1'
    jjwtVersion = '0.12.5'
    aspectjVersion = '1.9.21'
    junitVersion = '5.10.1'
    mockitoVersion = '5.6.0'
    postgresqlVersion = '42.7.1'
    liquibaseVersion = '4.25.1'
    testcontainersVersion = '1.19.4'
    jakartaServletVersion = '6.0.0'
    log4jVersion = '2.20.0'
    aspectjPluginVersion = '1.14.0'
    warPluginVersion = '3.3.1'
    compilerPluginVersion = '3.11.0'
}

dependencies {
    implementation "org.projectlombok:lombok:${lombokVersion}"
    implementation "com.fasterxml.jackson.dataformat:jackson-dataformat-xml:${jacksonVersion}"
    implementation "com.fasterxml.jackson.core:jackson-databind:${jacksonVersion}"
    implementation "org.mapstruct:mapstruct:${mapstructVersion}"
    implementation "org.aspectj:aspectjrt:${aspectjVersion}"
    implementation "io.jsonwebtoken:jjwt-api:${jjwtVersion}"
    implementation "io.jsonwebtoken:jjwt-impl:${jjwtVersion}"
    implementation "io.jsonwebtoken:jjwt-jackson:${jjwtVersion}"
    implementation "jakarta.servlet:jakarta.servlet-api:${jakartaServletVersion}"
    implementation "org.postgresql:postgresql:${postgresqlVersion}"
    implementation "org.liquibase:liquibase-core:${liquibaseVersion}"
    implementation "org.apache.logging.log4j:log4j-slf4j-impl:${log4jVersion}"

    testImplementation "org.junit.jupiter:junit-jupiter-api:${junitVersion}"
    testImplementation "org.mockito:mockito-core:${mockitoVersion}"
    testImplementation "org.testcontainers:junit-jupiter:${testcontainersVersion}"
    testImplementation "org.testcontainers:postgresql:${testcontainersVersion}"
    testImplementation "org.mockito:mockito-junit-jupiter:${mockitoVersion}"
}

group = 'ru.polskiy'
version = '1.0-SNAPSHOT'
description = 'coworking-service'
java.sourceCompatibility = JavaVersion.VERSION_17

publishing {
    publications {
        maven(MavenPublication) {
            from(components.java)
        }
    }
}

tasks.withType(JavaCompile) {
    options.annotationProcessorPath = configurations.annotationProcessor
    options.encoding = 'UTF-8'
}

tasks.withType(Javadoc) {
    options.encoding = 'UTF-8'
}
war {
    enabled = true
    archiveBaseName.set('coworking-service')
}
